@@ -7,10 +7,10 @@
     "bj_losses": 2,
     "gg_wins": 1,
     "gg_losses": 2,
-    "total_msgs": 612,
-    "total_commands": 331,
+    "total_msgs": 662,
+    "total_commands": 380,
     "farm_messages": 0,
-    "non_farm_messages": 282,
+    "non_farm_messages": 283,
     "achievements": 0
   },
   "497803559144914944": {
