@@ -8,6 +8,7 @@ function unlock(user, achievement_num, message, master){
                 master[i].achievements.push(achievement_num)
                 message.channel.send(`${master[i].name} Achievement Unlock: ${achievements[achievement_num].name}`)
                 success = true
+
             }
         }
     }
@@ -20,6 +21,30 @@ function unlock(user, achievement_num, message, master){
     }
 }
 module.exports.unlock = unlock
+
+function index_unlock(user, achievement_num, channel, master){
+    const fs = require ('fs')
+    var achievements = JSON.parse(fs.readFileSync("./JSON/achievements.json", "utf-8"))
+    var success = false
+    for(i in master){
+        if(user == i){
+            if(master[i].achievements.includes(achievement_num) == false){
+                master[i].achievements.push(achievement_num)
+                channel.send(`${master[i].name} Achievement Unlock: ${achievements[achievement_num].name}`)
+                success = true
+            }
+        }
+    }
+    if(success == true){
+        fs.writeFileSync ("./JSON/master.json", JSON.stringify(master), {spaces: 2}, function(err) {
+            if (err) throw err;
+            console.log('complete');
+            }
+        );
+    }
+}
+
+module.exports.index_unlock = index_unlock
 
 function reset1(user, achievement_num){
     const fs = require('fs')
@@ -82,3 +107,4 @@ function tracker2(user, achievement_num, index, message, master){
     );
 }
 module.exports.tracker2 = tracker2
+
